# rnn-hindi-translator

./: .gitignore  README.md  experiments.ipynb  pyproject.toml  translator.ipynb
learning-phase/: README.md
notebooks/: 00_run_tests.ipynb  01_data.ipynb  02_train.ipynb  02_train_kaggle.ipynb  02b_train_reverse.ipynb  03_backtranslation.ipynb  04_decode_eval.ipynb  04_decode_eval_kaggle.ipynb  05_analysis.ipynb  train.ipynb
src/nmt/: config.py
src/nmt/analysis/: alignments.py  attention_viz.py  embeddings.py  head_importance.py  loss_breakdown.py  probing.py
src/nmt/data/: backtranslation.py  clean.py  dataset.py  download.py  labse_filter.py  monolingual.py  tokenizer.py
src/nmt/decode/: beam.py  cache.py  ensemble.py  greedy.py  mbr.py  translate.py
src/nmt/eval/: evaluate.py  manual.py  metrics.py
src/nmt/model/: __init__.py  attention.py  decoder.py  decoder_layer.py  embeddings.py  encoder.py  encoder_layer.py  feedforward.py  norm.py  positional.py  transformer.py
src/nmt/train/: checkpoint.py  ema.py  loop.py  loss.py  optim.py  profiling.py  schedule.py  tracking.py
tests/: test_attention.py  test_beam.py  test_checkpoint.py  test_data_collate.py  test_ema.py  test_greedy.py  test_kv_cache.py  test_loop.py  test_loss.py  test_masks.py  test_metrics.py  test_model_forward.py  test_optim.py  test_profiling.py  test_read_lines.py  test_rope.py  test_schedule.py  test_tokenizer.py  test_tracking.py  test_translate.py
